--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,13 @@
   <body>
     <header class="page__header">
       <div class="container main__nav">
+        <a href="/index.html" class="logo">Web<span>Studio</span> </a>
+        <button type="button" class="menu-open" data-menu-open>
+          <svg class="menu-open__icon" width="40" height="40">
+            <use href="./images/icon.svg#icon-mob-open"></use>
+          </svg>
+        </button>
         <nav class="navigation">
-          <a href="/index.html" class="logo">Web<span>Studio</span> </a>
           <ul class="navigation__list list">
             <li class="navigation__item">
               <a href="./index.html" class="navigation__link link">Студія</a>
@@ -38,7 +43,7 @@
         <ul class="contacts list">
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link">
-              <svg class="contacts__icon" width="16" height="12">
+              <svg class="contacts__icon contacts-email" width="14" height="10">
                 <use href="./images/icon.svg#icon-email"></use>
               </svg>
               info@devstudio.com
@@ -46,13 +51,92 @@
           </li>
           <li class="contacts__item">
             <a href="tel:0961111111" class="contacts__link">
-              <svg class="contacts__icon" width="10" height="16">
+              <svg class="contacts__icon contacts-phone" width="10" height="14">
                 <use href="./images/icon.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11
             </a>
           </li>
         </ul>
+      </div>
+
+      <div class="mob-menu is-hidden" data-menu>
+        <div class="container">
+          <button type="button" class="menu-close" data-menu-close>
+            <svg class="menu-close__icon" width="40" height="40">
+              <use href="./images/icon.svg#icon-mob-close"></use>
+            </svg>
+          </button>
+          <div class="mob-menu__top">
+            <ul class="mob-menu__list list">
+              <li class="mob-menu__item">
+                <a href="./index.html" class="mob-menu__link link">Студія</a>
+              </li>
+              <li class="mob-menu__item">
+                <a href="./portfolio.html" class="mob-menu__link link current"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="mob-menu__item">
+                <a href="" class="mob-menu__link link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+          <div class="mob-menu__buton">
+            <ul class="mob-contacts__list list">
+              <li class="mob-contacts__item">
+                <a href="tel:0961111111" class="contacts-tel__link link">
+                  +38 096 111 11 11
+                </a>
+              </li>
+              <li class="mob-contacts__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="contacts-mail__link link"
+                  >info@devstudio.com
+                </a>
+              </li>
+            </ul>
+            <ul class="mob-soc__list list">
+              <li class="mob-soc__item">
+                <a
+                  href=""
+                  class="mob-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram</a
+                >
+              </li>
+              <li class="mob-soc__item">
+                <a
+                  href=""
+                  class="mob-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Twitter</a
+                >
+              </li>
+              <li class="mob-soc__item">
+                <a
+                  href=""
+                  class="mob-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Facebook</a
+                >
+              </li>
+              <li class="mob-soc__item">
+                <a
+                  href=""
+                  class="mob-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main class="portfolio__main">
@@ -325,5 +409,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
